! Extended <cms:parse>/<cms:decorate> by attribute "noAutoCloseTags" for tag names that must not be auto-closed - Dropped inefficient mix of static methods that are called from the very same instance